area list for deployment

--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -11,7 +11,13 @@
                                     <a class="item"> <b>Deployment Menu</b></a>
                                     <a href="{% url 'deployment:location_form'%}" class="item">Add Location 
                                         <i class="plus circle icon"></i>
-                                    </a>  
+                                    </a>
+                                    <a href="{% url 'deployment:add_location'%}" class="item">Add Area Details
+                                        <i class="plus circle icon"></i>
+                                    </a>
+                                    <a href="{% url 'deployment:area_list'%}" class="item">Area List
+                                        <i class="list alternate icon"></i>
+                                    </a>
                                     <a href="{% url 'deployment:deployed_dogs'%}" class="item">Deployed Dogs
                                         <i class="list alternate icon"></i>
                                     </a>  
