Graphs and Stuff

--- a/training/templates/training/classify_k9_select.html
+++ b/training/templates/training/classify_k9_select.html
@@ -20,6 +20,10 @@
                 <th>Breed</th>
                 <td>{{data.breed}}</td>
             </tr>
+            <tr>
+                <th>Sex</th>
+                <td>{{data.sex}}</td>
+            </tr>
             {% if parent_exist %}
             <tr>
                 <th>Mother</th>
@@ -47,31 +51,43 @@
     </table>
 </div>
 
+<div class="ui info message">
+  <i class="close icon"></i>
+  <div class="header">
+   <i class="question icon"></i>Information
+  </div>
+  <ul class="list">
+    <li>Below this is a list of suggested skill assignment based from current data.</li>
+      <li>Click on a category to view corresponding data diagram.</li>
+  </ul>
+</div>
+
 <div class = "ui segment">
-    <table class="ui two column celled table">
+    <table class="ui four column celled table">
         <thead>
             <tr>
                 <th>Categories</th>
                 <th>Skills</th>
+                <th>Categories</th>
+                <th>Skills</th>
             </tr>
             <tr>
-                <th>Demand</th>
+                <th data-tooltip= "Click here to view data diagram on currently demanded skill">Demand</th>
+                <td>Somthing</td>
+                <th data-tooltip= "Click here to view data diagram on fraction of all skills">Ratio</th>
                 <td>Somthing</td>
             </tr>
             <tr>
-                <th>Family History(F)</th>
+                <th data-tooltip= "Click here to view data diagram on hereditary skills (all members)">Family History (General)</th>
+                <td>Somthing</td>
+                <th data-tooltip= "Click here to view data diagram on hereditary skills (members with the same breed)">Family History (Gender)</th>
                 <td>Somthing</td>
             </tr>
+
             <tr>
-                <th>Family History(M)</th>
+                <th data-tooltip= "Click here to view data diagram on skill count on current breed">Breed</th>
                 <td>Somthing</td>
-            </tr>
-            <tr>
-                <th>Breed</th>
-                <td>Somthing</td>
-            </tr>
-            <tr>
-                <th>Behaviour</th>
+                <th data-tooltip= "Click here to view data diagram on skill count on current sex">Sex</th>
                 <td>Somthing</td>
             </tr>
                         
