--- a/planningandacquiring/templates/planningandacquiring/K9_list.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_list.html
@@ -1,8 +1,12 @@
 {% extends "profiles/sidebar_pa.html" %} {% block content %}
-<h1 class="ui header">
-    {{Title}}
-    <div class="sub header">List of all K9s on record</div>
-</h1>
+<div class="ui inverted segment" style="padding:20px;">
+    <h3 class="ui header">{{ Title }}</h3>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="{{style}}" > {{ message }}</div>
+        {% endfor %}
+    {% endif %}
+</div>
 
 <div class = "ui segment">
 
