--- a/profiles/templates/profiles/add_User.html
+++ b/profiles/templates/profiles/add_User.html
@@ -1,12 +1,10 @@
 {% extends "profiles/sidebar_um.html" %} {% block content %}
 
-<div class="ui inverted segment" style="padding:20px;">
-    <h3 class="ui header">{{ title }}</h3>
-    {% if messages %}
-        {% for message in messages %}
-            <div class="ui green message" > {{ message }}</div>
-        {% endfor %}
-    {% endif %}
+<div class="ui basic segment" style="margin-bottom:0px;">
+    <h2 class="ui header">
+        {{title}}
+        <div class="sub header">Input data of User Here</div>
+    </h2>
 </div>
 
 <div class="ui ordered steps">
