--- a/profiles/templates/profiles/user_list.html
+++ b/profiles/templates/profiles/user_list.html
@@ -1,8 +1,12 @@
 {% extends "profiles/sidebar_um.html" %} {% block content %}
-<h1 class="ui header">
-    {{Title}}
-    <div class="sub header">List of all users on record</div>
-</h1>
+<div class="ui inverted segment" style="padding:20px;">
+    <h3 class="ui header">{{ Title }}</h3>
+    {% if messages %}
+        {% for message in messages %}
+            <div class="{{style}}" > {{ message }}</div>
+        {% endfor %}
+    {% endif %}
+</div>
 		<table id="tabledata" class="ui celled table">
         	<thead>
           	<tr>
