--- a/unitmanagement/templates/unitmanagement/health_form.html
+++ b/unitmanagement/templates/unitmanagement/health_form.html
@@ -1,8 +1,11 @@
 {% extends "profiles/sidebar_um.html" %}  
 
 {% block content %}
-<div class="ui inverted segment" style="padding:20px;">
-    <h3 class="ui header">{{ title }}</h3>
+<div class="ui basic segment" style="margin-bottom:0px;">
+    <h2 class="ui header">
+        {{title}}
+        <div class="sub header">Input data of Health Concern Here</div>
+    </h2>
     {% if messages %}
         {% for message in messages %}
             <div class="{{style}}" > {{ message }}</div>
