Removed adding of seller information for each individual k9

--- a/planningandacquiring/templates/planningandacquiring/forecast_k9_required.html
+++ b/planningandacquiring/templates/planningandacquiring/forecast_k9_required.html
@@ -6,7 +6,7 @@
  {{ graph|safe }}
 {% endif %}
 
-<table class="ui inverted celled table" >
+<table class="ui celled table" >
 <tr>
         <th>Model</th>
 
