--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -18,7 +18,10 @@
                                         <i class="list alternate icon"></i>
                                 </a>
                                  <a href="{% url 'planningandacquiring:K9_forecast'%}" class="item">K9 Forecasting
-                                        <i class="list alternate icon"></i>
+                                       <i class="chart line icon"></i>
+                                </a>
+                                <a class="item">Budgeting
+                                        <i class="money bill alternate outline icon"></i>
                                 </a>
 
                             </div>
