--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -48,11 +48,8 @@
           <i class="venus icon"></i>
           Mother
         </div>
-        <div class="field">
+{{form.mother}}
 
-        {{form.mother}}
-
-        </div>
       </div>
 
       <div class="column">
@@ -61,11 +58,7 @@
           Father
         </div>
 
-      <div class = "field">
-
-      {{form.father}}
-
-      </div>
+          {{form.father}}
       </div>
 
       </div>
@@ -77,5 +70,19 @@
     </div>
 
 </form>
+
+<script type="text/javascript">
+
+	$(document).ready(function() {
+		$('#tabledata1').DataTable();
+		$('.menu .item').tab();
+		$('#tabledata2').DataTable();
+		$('.menu .item').tab();
+	});
+
+    $('.ui.radio.checkbox')
+    .checkbox()
+      ;
+</script>
 
 {% endblock %}
