--- a/deployment/templates/deployment/assign_team.html
+++ b/deployment/templates/deployment/assign_team.html
@@ -13,7 +13,7 @@
                 <div class="{{ style }}">{{message}}</div>
             {% endfor %}
         {% endif %}
-    <form class="ui inverted equal width form" action="{% url 'deployment:add_location' %}" method="POST">
+    <form class="ui inverted equal width form" id="area_team_form" action="{% url 'deployment:assign_team' %}" data-teams-url="{% url 'deployment:ajax_load_teams' %}" method="POST" novalidate>
         {% csrf_token %}
         <div class="fields">
             <div class="field">
@@ -54,5 +54,23 @@
     </form>
     </div>
 </div>
+
+  <script>
+    $("#id_area").change(function () {
+      var url = $("#area_team_form").attr("data-teams-url");  // get the url of the `load_teams` view
+      var areaId = $(this).val();  // get the selected area ID from the HTML input
+
+      $.ajax({                       // initialize an AJAX request
+        url: url,                    // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+        data: {
+          'area': areaId       // add the country id to the GET parameters
+        },
+        success: function (data) {   // `data` is the return of the `load_teams` view function
+          $("#id_team").html(data);  // replace the contents of the teams input with the data that came from the server
+        }
+      });
+
+    });
+  </script>
 
 {% endblock %}
