--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -12,7 +12,7 @@
                                     <a href="{% url 'deployment:location_form'%}" class="item">Add Location 
                                         <i class="plus circle icon"></i>
                                     </a>
-                                    <a href="{% url 'deployment:add_location'%}" class="item">Add Area Details
+                                    <a href="{% url 'deployment:assign_team'%}" class="item">Add Area Details
                                         <i class="plus circle icon"></i>
                                     </a>
                                     <a href="{% url 'deployment:area_list'%}" class="item">Area List
