--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -9,7 +9,10 @@
                         <div class="three wide column">
                                 <div class="ui tiny pointing vertical menu" style="width:230px;">
                                     <a class="item"> <b>Deployment Menu</b></a>
-                                    <a href="{% url 'deployment:location_form'%}" class="item">Add Location 
+                                    <a href="{% url 'deployment:add_location'%}" class="item">Add Location
+                                        <i class="plus circle icon"></i>
+                                    </a>
+                                    <a href="{% url 'deployment:add_team'%}" class="item">Add Team
                                         <i class="plus circle icon"></i>
                                     </a>
                                     <a href="{% url 'deployment:assign_team'%}" class="item">Add Area Details
