--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_parents.html
@@ -183,7 +183,7 @@
 <form action="{% url 'planningandacquiring:K9_parents_confirmed' %}" method="post">
  {% csrf_token %}
     <div class="ui buttons">
-  <button class="ui button" name="redo" onclick="return confirm('Are you sure?')">Select Parents</button>
+  <button class="ui button" name="redo" onclick="return confirm('Go back to selecting parents?')">Select Parents</button>
   <div class="or"></div>
   <button class="ui positive button" name="ok" onclick="return confirm('Are you sure?')">Next Step</button>
 </div>
