Made changes to forecasting models to work on non-stationary data. (Haven't back tested to stationary data)

--- a/planningandacquiring/templates/planningandacquiring/forecast_k9_required.html
+++ b/planningandacquiring/templates/planningandacquiring/forecast_k9_required.html
@@ -17,7 +17,7 @@
         <tr>
         <th>Error</th>
             {% for error in errors %}
-    <td>{{ error }}%</td>
+    <td>{{ error }}</td>
     {% endfor %}
             </tr>
 
