request equipment and approve request

--- a/deployment/templates/deployment/add_location.html
+++ b/deployment/templates/deployment/add_location.html
@@ -20,7 +20,7 @@
                                    {% csrf_token %}
                                     <div class="field">
                                         <label>Area</label>
-                                            {{form.area}}
+                                            {{form.name}}
                                     </div>
     
                                     <div class="ui inverted right aligned segment" style="padding: 0px;">
