--- a/deployment/templates/deployment/add_team.html
+++ b/deployment/templates/deployment/add_team.html
@@ -24,7 +24,7 @@
                                     </div>
                                    <div class="field">
                                         <label>Team</label>
-                                            {{form.team}}
+                                            {{form.name}}
                                     </div>
 
                                     <div class="ui inverted right aligned segment" style="padding: 0px;">
