--- a/profiles/templates/profiles/add_User.html
+++ b/profiles/templates/profiles/add_User.html
@@ -30,7 +30,7 @@
 
 <div class="ui fluid container">
     <div class="ui inverted segment">
-    <form class="ui inverted equal width form" action="{% url 'profiles:assign_handler_form' %}" method="POST">
+    <form class="ui inverted equal width form" action="{% url 'profiles:add_User_form' %}" method="POST">
         {% csrf_token %}
         <div class="fields">
             <div class="field">
