--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -28,6 +28,12 @@
                                     <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
                                     </a>
+                                    <a href="{% url 'unitmanagement:request_form'%}" class="item">Request Equipment
+                                        <i class="exclamation icon"></i>
+                                    </a>
+                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Request List
+                                        <i class="clipboard list icon"></i>
+                                    </a>
                                 </div>
                         </div>
                         <!>
